--- a/index.html
+++ b/index.html
@@ -3,10 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>麵包店</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="box">
-        
+    <div class="main">
+        <div class="box">
+            <div class="nav">
+                <span class="logo"><a href="#">B Shop</a></span>
+                <ul>
+                    <li><a href="#">關於 B Shop</a></li>
+                    <li><a href="#">麵包的故事</a></li>
+                    <li><a href="#">聯絡 B Shop</a></li>
+                </ul>
+            </div>
+            <div class="content">
+                <h1>我們是 Bakery 商店</h1>
+                <p>我們提供品質最好的原料，並細心打造各種產品提供給喜愛我們的客戶。</p>
+                <a href="#">前往購買</a>
+                <hr>
+            </div>
+            <div class="button">
+                <ul>
+                    <li><a href="#"><img src="images/icon_about.png" alt="關於 B Shop"></a></li>
+                    <li><a href="#"><img src="images/icon_bread.png" alt="麵包的故事"></a></li>
+                    <li><a href="#"><img src="images/icon_contact.png" alt="聯絡 B Shop"></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        B Shop &copy; 2019
     </div>
 </body>
 </html>
