--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>麵包店</title>
+    <title>麵包店 - 關於 B Shop</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -17,17 +17,7 @@
                 </ul>
             </div>
             <div class="content">
-                <h1>我們是 Bakery 商店</h1>
-                <p>我們提供品質最好的原料，並細心打造各種產品提供給喜愛我們的客戶。</p>
-                <a href="product.html">前往購買</a>
-                <hr>
-            </div>
-            <div class="button">
-                <ul>
-                    <li><a href="about.html"><img src="images/icon_about.png" alt="關於 B Shop"></a></li>
-                    <li><a href="product.html"><img src="images/icon_bread.png" alt="麵包的故事"></a></li>
-                    <li><a href="contact.html"><img src="images/icon_contact.png" alt="聯絡 B Shop"></a></li>
-                </ul>
+                <h2 class="background-box">我們是 B Shop 堅持使用最健康的原物料並手工製作每個產品</h2>
             </div>
         </div>
     </div>
